AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
	indent.sh \
	systeminfo.sh \
	osx-dmginstaller/DS_Store \
	osx-dmginstaller/buildinstaller.sh \
	osx-dmginstaller/droplet_system.applescript \
	osx-dmginstaller/droplet_user.applescript \
	osx-dmginstaller/icon2app \
	osx-dmginstaller/installer_system.applescript \
	osx-dmginstaller/installer_user.applescript \
	win-nsis/Gem.nsi \
	win-nsis/buildinstaller.bat \
	win-nsis/uninstaller1.nsi \
	win-nsis/uninstaller2.nsi \
	$(empty)
