AC_PREREQ([2.71])
AC_INIT([videoPYLON],[0.1],[zmoelnig@iem.at],[],[http://gem.iem.at])
LT_INIT([win32-dll])

AC_CONFIG_AUX_DIR([.])
AC_CONFIG_MACRO_DIR([../../m4])

AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_SRCDIR([videoPYLON.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_PROG_CXX
#AM_SANITY_CHECK

GEM_CHECK_FAT(GEM_ARCH)
GEM_CHECK_EXTERNAL

AC_LANG(C++)


GEM_CHECK_PYLON

AC_OUTPUT
